[fix] table header overlapping with cells

--- a/static/themes/opsi-dark.css
+++ b/static/themes/opsi-dark.css
@@ -20,6 +20,7 @@
   --danger: #dc3545;
   --light: #f8f9fa;
   --dark: #343a40;
+  --header:#40464e;
   --breakpoint-xs: 0;
   --breakpoint-sm: 576px;
   --breakpoint-md: 768px;
